2010-04-23  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Yury Semikhatsky.

        WebInspector: Flaky Inspector tests.
        https://bugs.webkit.org/show_bug.cgi?id=36217

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::didCommitLoad):

2010-04-23  Yaar Schnitman  <yaar@chromium.org>

        Reviewed by Adam Barth.

        Auto-generate WebGLRenderingContext overloads in V8
        https://bugs.webkit.org/show_bug.cgi?id=37818

        * bindings/v8/custom/V8WebGLRenderingContextCustom.cpp:
        * html/canvas/WebGLRenderingContext.cpp: Added missing overloads for the following:.
        (WebCore::WebGLRenderingContext::texImage2D)
        (WebCore::WebGLRenderingContext::texSubImage2D)
        * html/canvas/WebGLRenderingContext.h: Added missing overloads.
        * html/canvas/WebGLRenderingContext.idl: IDL definition of overloads.

2010-04-23  Jeff Schiller  <codedread@gmail.com>

        Reviewed by Nikolas Zimmermann.

        Display tooltips when hovering over SVG elements, Bug 16854
        https://bugs.webkit.org/show_bug.cgi?id=16854

        Manual test added for verifying tooltips.

        * manual-tests/svg-tooltip.svg: Added.
        * svg/SVGAElement.cpp:
        (WebCore::SVGAElement::title): xlink:title takes precedence, otherwise SVGStyledElement::title() is used
        * svg/SVGStyledElement.cpp:
        (WebCore::SVGStyledElement::title): checks for a shadow parent and uses that title, otherwise uses the content's title
        * svg/SVGStyledElement.h: add title() method declaration

2010-04-23  David Kilzer  <ddkilzer@apple.com>

        <http://webkit.org/b/38032> No need to content sniff 304 responses
        <rdar://problem/7891726>

        Reviewed by Brady Eidson.

        * platform/network/mac/ResourceHandleMac.mm:
        (-[WebCoreResourceHandleAsDelegate connection:didReceiveResponse:]):
        No need to adjust the MIME type on 304 responses since they're