@@ -1,3 +1,13 @@
+2010-04-23  Alexander Pavlov  <apavlov@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: Audits (Image Dimensions): full image URLs are prefixed with the hosting page name
+        https://bugs.webkit.org/show_bug.cgi?id=37988
+
+        * inspector/front-end/AuditRules.js:
+        (WebInspector.AuditRules.ImageDimensionsRule.prototype.doRun):
+
 2010-04-23  Ilya Tikhonovsky  <loislo@chromium.org>
 
         Reviewed by Yury Semikhatsky.
